{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 152,
  "lineage": "245fa8e5-cb2c-43e4-3f18-98b0242042c2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:loadbalancer/app/weather-app-k8s-alb/25f94470810dbd31",
            "arn_suffix": "app/weather-app-k8s-alb/25f94470810dbd31",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "weather-app-k8s-alb-1886712287.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:069089526123:loadbalancer/app/weather-app-k8s-alb/25f94470810dbd31",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "weather-app-k8s-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ba0c46c24c07d40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d9f4ad658ba1c796"
              },
              {
                "subnet_id": "subnet-0fafb76fb8d1a70f3"
              }
            ],
            "subnets": [
              "subnet-0d9f4ad658ba1c796",
              "subnet-0fafb76fb8d1a70f3"
            ],
            "tags": {
              "Name": "weather-app-k8s-alb"
            },
            "tags_all": {
              "Name": "weather-app-k8s-alb"
            },
            "vpc_id": "vpc-06dea76c964aed860",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "node_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "30008",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:listener/app/weather-app-k8s-alb/25f94470810dbd31/cfaa6b4848d2095f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:069089526123:listener/app/weather-app-k8s-alb/25f94470810dbd31/cfaa6b4848d2095f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:loadbalancer/app/weather-app-k8s-alb/25f94470810dbd31",
            "mutual_authentication": [],
            "port": 30008,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.node_port",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "node_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "30008",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
            "arn_suffix": "targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "30008",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:069089526123:loadbalancer/app/weather-app-k8s-alb/25f94470810dbd31"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "weather-app-k8s-tg-30008",
            "port": 30008,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "weather-app-k8s-tg-30008"
            },
            "tags_all": {
              "Name": "weather-app-k8s-tg-30008"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "30008-0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e-20260802124013925300000005",
            "port": 30008,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
            "target_id": "i-0344f6993daf191ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.node_port",
            "module.compute.aws_iam_instance_profile.node",
            "module.compute.aws_iam_role.node",
            "module.compute.aws_instance.worker",
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.worker"
          ]
        },
        {
          "index_key": "30008-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e-20260802124014090200000006",
            "port": 30008,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:069089526123:targetgroup/weather-app-k8s-tg-30008/dc4a4dd26715b53e",
            "target_id": "i-0a1621ecd04ae8aba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.node_port",
            "module.compute.aws_iam_instance_profile.node",
            "module.compute.aws_iam_role.node",
            "module.compute.aws_instance.worker",
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bc385c9fc5afc94",
            "arn": "arn:aws:ec2:us-east-1:069089526123:instance/i-04d09e9387c30f9a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d09e9387c30f9a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3673c5f47fe65c2",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_dns": "ec2-32-196-135-123.compute-1.amazonaws.com",
            "public_ip": "32.196.135.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fc31209d833faf7c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fafb76fb8d1a70f3",
            "tags": {
              "Name": "weather-app-k8s-bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "weather-app-k8s-bastion",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b48143ab60be811"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bc385c9fc5afc94",
            "arn": "arn:aws:ec2:us-east-1:069089526123:instance/i-0421fa7f7561a3c99",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "weather-app-k8s-k8s-node-profile",
            "id": "i-0421fa7f7561a3c99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bc73481c44f4674",
            "private_dns": "ip-10-0-11-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:069089526123:key/c6296296-58f5-4a11-8712-98f42846cef9",
                "throughput": 125,
                "volume_id": "vol-00dfb8f5a3418e779",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03701e8a83fe81fb6",
            "tags": {
              "Name": "weather-app-k8s-k8s-master",
              "Role": "master"
            },
            "tags_all": {
              "Name": "weather-app-k8s-k8s-master",
              "Role": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b22f5683178d52f3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_iam_instance_profile.node",
            "module.compute.aws_iam_role.node",
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bc385c9fc5afc94",
            "arn": "arn:aws:ec2:us-east-1:069089526123:instance/i-0344f6993daf191ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "weather-app-k8s-k8s-node-profile",
            "id": "i-0344f6993daf191ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e58e257fae23fa6b",
            "private_dns": "ip-10-0-11-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:069089526123:key/c6296296-58f5-4a11-8712-98f42846cef9",
                "throughput": 125,
                "volume_id": "vol-0798f11ea8e037950",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03701e8a83fe81fb6",
            "tags": {
              "Name": "weather-app-k8s-k8s-worker-1",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "weather-app-k8s-k8s-worker-1",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09417c5a4d38e64fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_iam_instance_profile.node",
            "module.compute.aws_iam_role.node",
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.worker"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bc385c9fc5afc94",
            "arn": "arn:aws:ec2:us-east-1:069089526123:instance/i-0a1621ecd04ae8aba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "weather-app-k8s-k8s-node-profile",
            "id": "i-0a1621ecd04ae8aba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e67d2df81f2db648",
            "private_dns": "ip-10-0-12-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:069089526123:key/c6296296-58f5-4a11-8712-98f42846cef9",
                "throughput": 125,
                "volume_id": "vol-0ed154801713203f8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7d82f8deb2c235a",
            "tags": {
              "Name": "weather-app-k8s-k8s-worker-2",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "weather-app-k8s-k8s-worker-2",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09417c5a4d38e64fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_iam_instance_profile.node",
            "module.compute.aws_iam_role.node",
            "module.compute.data.aws_ami.al2023",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04946893a29f3d366",
            "arn": "arn:aws:ec2:us-east-1:069089526123:elastic-ip/eipalloc-04946893a29f3d366",
            "association_id": "eipassoc-0b2a39acb8df8c45e",
            "domain": "vpc",
            "id": "eipalloc-04946893a29f3d366",
            "network_border_group": "us-east-1",
            "network_interface": "eni-073fe65422ae9d1e8",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-52-72-48-217.compute-1.amazonaws.com",
            "public_ip": "52.72.48.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "weather-app-k8s-nat-eip"
            },
            "tags_all": {
              "Name": "weather-app-k8s-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:internet-gateway/igw-072049a1bbb12c3b6",
            "id": "igw-072049a1bbb12c3b6",
            "owner_id": "069089526123",
            "tags": {
              "Name": "weather-app-k8s-igw"
            },
            "tags_all": {
              "Name": "weather-app-k8s-igw"
            },
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04946893a29f3d366",
            "association_id": "eipassoc-0b2a39acb8df8c45e",
            "connectivity_type": "public",
            "id": "nat-0fb14036c8996f4d6",
            "network_interface_id": "eni-073fe65422ae9d1e8",
            "private_ip": "10.0.1.55",
            "public_ip": "52.72.48.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fafb76fb8d1a70f3",
            "tags": {
              "Name": "weather-app-k8s-nat-gateway"
            },
            "tags_all": {
              "Name": "weather-app-k8s-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:route-table/rtb-086e7aa748d32ef23",
            "id": "rtb-086e7aa748d32ef23",
            "owner_id": "069089526123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb14036c8996f4d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-app-k8s-private-rt"
            },
            "tags_all": {
              "Name": "weather-app-k8s-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:route-table/rtb-04872a588b4c3852a",
            "id": "rtb-04872a588b4c3852a",
            "owner_id": "069089526123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072049a1bbb12c3b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-app-k8s-public-rt"
            },
            "tags_all": {
              "Name": "weather-app-k8s-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acfba9359e0b84a3",
            "route_table_id": "rtb-086e7aa748d32ef23",
            "subnet_id": "subnet-03701e8a83fe81fb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043e10383fc0302af",
            "route_table_id": "rtb-086e7aa748d32ef23",
            "subnet_id": "subnet-0d7d82f8deb2c235a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0f87a17028ff8c",
            "route_table_id": "rtb-04872a588b4c3852a",
            "subnet_id": "subnet-0fafb76fb8d1a70f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182d118daafc1d1a",
            "route_table_id": "rtb-04872a588b4c3852a",
            "subnet_id": "subnet-0d9f4ad658ba1c796"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:subnet/subnet-03701e8a83fe81fb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03701e8a83fe81fb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069089526123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-app-k8s-private-0"
            },
            "tags_all": {
              "Name": "weather-app-k8s-private-0"
            },
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:subnet/subnet-0d7d82f8deb2c235a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d82f8deb2c235a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069089526123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-app-k8s-private-1"
            },
            "tags_all": {
              "Name": "weather-app-k8s-private-1"
            },
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:subnet/subnet-0fafb76fb8d1a70f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fafb76fb8d1a70f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069089526123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-app-k8s-public-0"
            },
            "tags_all": {
              "Name": "weather-app-k8s-public-0"
            },
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:subnet/subnet-0d9f4ad658ba1c796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f4ad658ba1c796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069089526123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-app-k8s-public-1"
            },
            "tags_all": {
              "Name": "weather-app-k8s-public-1"
            },
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:vpc/vpc-06dea76c964aed860",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0005958305f9df4d3",
            "default_route_table_id": "rtb-0296240d6d7d79780",
            "default_security_group_id": "sg-0d837a22c7fc34939",
            "dhcp_options_id": "dopt-0a0edb8774a6b5b00",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06dea76c964aed860",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0296240d6d7d79780",
            "owner_id": "069089526123",
            "tags": {
              "Name": "weather-app-k8s-vpc"
            },
            "tags_all": {
              "Name": "weather-app-k8s-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:security-group/sg-00ba0c46c24c07d40",
            "description": "ALB - public entrypoint",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "To worker NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "id": "sg-00ba0c46c24c07d40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "weather-app-k8s-alb-sg",
            "name_prefix": "",
            "owner_id": "069089526123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-k8s-alb-sg"
            },
            "tags_all": {
              "Name": "weather-app-k8s-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:security-group/sg-01b48143ab60be811",
            "description": "Bastion host for SSH proxying",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b48143ab60be811",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "weather-app-k8s-bastion-sg",
            "name_prefix": "",
            "owner_id": "069089526123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-k8s-bastion-sg",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "weather-app-k8s-bastion-sg",
              "Role": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:security-group/sg-0b22f5683178d52f3",
            "description": "Kubernetes control-plane node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b22f5683178d52f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin only or Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b48143ab60be811"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server (kube-apiserver)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All intra-cluster traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Calico BGP",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Calico VXLAN overlay",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Flannel VXLAN overlay",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kube-controller-manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kube-scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              }
            ],
            "name": "weather-app-k8s-k8s-master-sg",
            "name_prefix": "",
            "owner_id": "069089526123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-k8s-k8s-master-sg",
              "Role": "master"
            },
            "tags_all": {
              "Name": "weather-app-k8s-k8s-master-sg",
              "Role": "master"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069089526123:security-group/sg-09417c5a4d38e64fc",
            "description": "Kubernetes worker node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09417c5a4d38e64fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin only or Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b48143ab60be811"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All intra-cluster traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Calico BGP",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Calico VXLAN overlay",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Flannel VXLAN overlay",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kubelet API from master",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NodePort range intra-cluster",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "NodePort range from ALB",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ba0c46c24c07d40"
                ],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "weather-app-k8s-k8s-worker-sg",
            "name_prefix": "",
            "owner_id": "069089526123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-k8s-k8s-worker-sg",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "weather-app-k8s-k8s-worker-sg",
              "Role": "worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dea76c964aed860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    }
  ]
}